--- a/style.css
+++ b/style.css
@@ -98,4 +98,7 @@ body{
 #qr-reader__dashboard_section_swaplink{
     display: none;
 }
+#qr-shaded-region{
+    border-color: rgba(0, 0, 0, 0);
+}
 
